# destructible-terrain-test

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
include/: application.hpp  first_person_camera.hpp  logger.hpp  window.hpp
include/event/: application_event.hpp  event.hpp  key_event.hpp  mouse_event.hpp
include/graphics/: texture.hpp  vertex_array.hpp  vertex_buffer.hpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/physx/include/: PxPhysicsAPI.h
lib/stb/stb_image/: CMakeLists.txt
res/: default_world_gen_config.txt  flat_plane_config.txt
res/shaders/: chunk.glsl  dc_mesher.glsl  dc_triangulator.glsl  dual_contouring.glsl  generate_dc_points.glsl  generate_edge_data.glsl  generate_feature_points.glsl  generate_points.glsl  light_test.glsl  lit_normals.glsl  marching_cubes.glsl  mesh_ray_intersect.glsl  ray_mesh_command.glsl  shader.glsl  signs_test.glsl  simple.glsl  terraform.glsl  textured_quad.glsl
res/shaders/include/: qef_solver.glsl  raw_qef.glsl  simplex_noise.glsl  simplex_noise_grad.glsl
src/: CMakeLists.txt  application.cpp  application.hpp  debug_controls.cpp  debug_controls.hpp  first_person_camera.cpp  first_person_camera.hpp  game_system.cpp  game_system.hpp  logger.hpp  main.cpp  player.cpp  player.hpp  window.cpp  window.hpp
src/dc/: CMakeLists.txt  cube_frame.cpp  cube_frame.hpp  dc_app.cpp  dc_app.hpp  dc_plane.cpp  dc_plane.hpp  density.cpp  density.hpp  mesh.cpp  mesh.hpp  octree.cpp  octree.hpp  qef.cpp  qef.hpp  qef_simd.cpp  qef_simd.hpp  simplex_noise_grad.cpp  simplex_noise_grad.hpp  svd.cpp  svd.hpp
src/event/: CMakeLists.txt  application_event.hpp  event.hpp  key_event.hpp  mouse_event.hpp
src/graphics/: CMakeLists.txt  asset.cpp  asset.hpp  atomic_counter_buffer.cpp  atomic_counter_buffer.hpp  fence_wrapper.cpp  fence_wrapper.hpp  gpu_synchronizer.cpp  gpu_synchronizer.hpp  shader.cpp  shader.hpp  shader_storage_buffer.cpp  shader_storage_buffer.hpp  texture.cpp  texture.hpp  uniform_buffer.cpp  uniform_buffer.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.hpp  vertex_data_layout.cpp
src/world/: CMakeLists.txt  chunk.cpp  chunk.hpp  cs_world.cpp  cs_world.hpp  simplex_noise.cpp  simplex_noise.hpp  world.cpp  world.hpp  world_mesh.cpp
